--- a/style.css
+++ b/style.css
@@ -36,3 +36,10 @@ main {
   padding-top: 20px;
   text-align: center;
 }
+
+/* Requisito 6: Crie a classe newspaper */
+.newspaper {
+  background-color: antiquewhite;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+}
