--- a/style.css
+++ b/style.css
@@ -52,3 +52,11 @@ main {
   font-weight: 900;
   text-transform: uppercase;
 }
+
+/* Requisito 8: Cria a classe magazine2 */
+.magazine2 {
+  background-image: url(images/pink-pattern.png);
+  color: fuchsia;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+}
