--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-#box {
-  margin: -7.8px;
-  width: 1366px;
-  height: 768px;
-  border: 1px solid red;
-  position: absolute;
-  z-index: -1;
-}
-
 main {
   margin: 5px;
 }
@@ -32,7 +23,7 @@ main {
   color: #ffffff;
 }
 
-#carta-gerada {
+#carta-gerada {  
   padding-top: 20px;
   text-align: center;
 }
@@ -99,7 +90,17 @@ main {
   transform: skewX(-10deg);
 }
 
-#carta-contador {
-  font-size: 20px;
-  text-align: center;
+.counter-container {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.before-contador {  
+  font-size: 20px;  
+  margin-right: 8px;
+}
+
+#carta-contador {  
+  font-size: 20px;  
 }
