Adicionando 'margin-right: 10px' em '#carta-gerada span' para simular um espaço entre as palavras com o CSS.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ main {
   padding-top: 20px;  
 }
 
+#carta-gerada span {
+  margin-right: 10px;
+}
+
 /* Requisito 6: Crie a classe newspaper */
 .newspaper {
   background-color: antiquewhite;
